test/Conversions/smt_to_smtlib_no_roots.llzk
// RUN: not llzk-opt --smt-to-smtlib -o /dev/null %s 2>&1 | FileCheck %s

module {
  func.func @wrapper() {
    smt.solver () : () -> () {
      smt.yield
    }
    return
  }
}

// CHECK: error: smt-to-smtlib could not find a top-level smt.solver in the root module
